--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,64 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+:root {
+  --font-family-sans: 'Roboto', sans-serif;
+}
+
+@theme {
+  --font-sans: var(--font-family-sans);
+
+  --color-border: #cccccc;
+  --color-background-main: #F5F5F5;
+}
+
+@layer components {
+  .auth-form {
+    @apply p-4 rounded-md border-[1.5px] w-full
+  }
+
+  .button-form {
+    @apply p-4 rounded-md w-full bg-blue-500 duration-300 text-white font-medium cursor-pointer hover:scale-101
+  }
+
+}
+
+@layer utilities {
+  .border-primary {
+    border-color: var(--color-border)
+  }
+
+  .color-background-main {
+    background-color: var(--color-background-main)
+  }
+
+  .animation-fade-out {
+    animation: fadeOut 240ms both ease-in-out;
+  }
+
+  .animation-fade-in {
+    animation: fadeIn 240ms both ease-in-out;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(-80px);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateX(-80px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
