--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,10 @@ body {
     @apply p-4 rounded-md bg-blue-500 opacity-75 duration-200 text-white font-medium cursor-pointer hover:opacity-100
   }
 
+  .button {
+    @apply py-2 px-4 rounded-md border border-[var(--color-border)] font-medium cursor-pointer duration-300 text-[var(--color-font-light)] hover:bg-blue-500 hover:text-white
+  }
+
   .card-element {
     @apply bg-white shadow-sm rounded-lg
   }
