--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,10 @@
 @import 'tailwindcss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   /*font-family: 'Roboto', sans-serif;*/
 }
